# Lagrange

./: .gitignore  CMakeLists.txt
include/Lagrange_CUDA/: octree.h
include/glad/: glad.h
src/: cuda_barnes_hut.cu  glad.c  main.cu  nbody.cu  sequential.cpp  sequential.cu
